* fixed issue with portrait descending too low #169

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -34,6 +34,15 @@
   }
 }
 
+.profile-img{
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height:100%;
+  object-fit: none;
+  object-position: top left;
+}
+
 .sheet-tabs {
   flex: 0;
 }
